# orbis

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  FEATURE_STATUS.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  package.json
.cargo/: config.toml
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: README-roadmap-update.md  codeql.yml  deploy-docs.yml  publish-plugin-api.yml  trigger-roadmap-update.sh  update-roadmap.yml
builder/: Cargo.toml
builder/src/: main.rs
builder/src/args/: hash.rs  keygen.rs  list.rs  mod.rs  sign.rs  verify.rs
builder/src/handler/: hash.rs  keygen.rs  list.rs  mod.rs  sign.rs  verify.rs
crates/orbis-auth/: Cargo.toml
crates/orbis-auth/src/: jwt.rs  lib.rs  password.rs  session.rs  user.rs
crates/orbis-config/: Cargo.toml
crates/orbis-config/src/: cli.rs  database.rs  lib.rs  logging.rs  server.rs  tls.rs
crates/orbis-core/: Cargo.toml
crates/orbis-core/src/: error.rs  lib.rs  mode.rs  profile.rs  types.rs
crates/orbis-db/: Cargo.toml
crates/orbis-db/migrations/postgres/: 20241216000001_initial_schema.sql
crates/orbis-db/migrations/sqlite/: 20241216000001_initial_schema.sql
crates/orbis-db/src/: connection.rs  lib.rs  migrations.rs  pool.rs  repository.rs
crates/orbis-dsl/: COMPONENTS_CHEATSHEET.md  COMPONENTS_REFERENCE.md  Cargo.toml  README.md  build.rs
crates/orbis-dsl/docs/: COMPONENT_REFERENCE.md
crates/orbis-dsl/examples/: comprehensive-grammar-test.orbis  comprehensive-grammar-test.orbis.json  debug_if.rs  debug_styles.rs  parse_single.rs  parse_to_json.rs  simple.orbis
crates/orbis-dsl/examples/pages/: dashboard.orbis  dashboard.orbis.json  product-catalog.orbis  product-catalog.orbis.json  registration-form.orbis  registration-form.orbis.json
crates/orbis-dsl/src/: lib.rs  metadata.pest  metadata.rs  page.pest  page.rs
crates/orbis-dsl/src/ast/: builder.rs  component.rs  control.rs  expr.rs  filter.rs  mod.rs  node.rs  parser.rs  state.rs  types.rs  visitor.rs
crates/orbis-dsl/tests/: attribute_whitelisting.rs  example_validation.rs
crates/orbis-lsp/: Cargo.toml  README.md
crates/orbis-lsp/src/: analysis.rs  backend.rs  capabilities.rs  completion.rs  definition.rs  diagnostics.rs  document.rs  hover.rs  lib.rs  main.rs  references.rs  semantic_tokens.rs  symbols.rs
crates/orbis-lsp/tests/: completion_regressions.rs  debug_all_template_comments.rs  debug_closing_tag.rs  debug_doccomment.rs  debug_specific_lines.rs  debug_template_comments.rs  real_file_test.rs  regression_tests.rs  semantic_tokens_test.rs
crates/orbis-plugin/: Cargo.toml
crates/orbis-plugin-api/: Cargo.toml  README.md
crates/orbis-plugin-api/examples/: complete_plugin.rs
crates/orbis-plugin-api/src/: error.rs  lib.rs  manifest.rs  runtime.rs  ui.rs
crates/orbis-plugin-api/src/sdk/: context.rs  db.rs  error.rs  ffi.rs  http.rs  log.rs  mod.rs  response.rs  state.rs
crates/orbis-plugin/src/: lib.rs  loader.rs  manifest.rs  registry.rs  runtime.rs  sandbox.rs  ui.rs  ui_enhanced.rs  watcher.rs
crates/orbis-plugin/tests/: allocate_smoke.rs  plugin_loading.rs  runtime_integration.rs
crates/orbis-server/: Cargo.toml
crates/orbis-server/src/: app.rs  error.rs  extractors.rs  lib.rs  middleware.rs  state.rs  tls.rs
crates/orbis-server/src/routes/: auth.rs  health.rs  mod.rs  plugin_management.rs  plugins.rs  profiles.rs  settings.rs  static_files.rs  users.rs
docs/: DSL_IMPROVEMENTS_ROADMAP.md  ROADMAP-QUICKREF.md  astro.config.mjs  components.json  docusaurus.config.ts  eslint.config.mts  package-lock.json  package.json  sidebars.ts  tailwind.config.js  tsconfig.json
docs/docs/actions/: flow-control.md  form-actions.md  show-toast.md
docs/docs/api-reference/: data-sources.md  expressions.md  overview.md  validation.md
docs/docs/components/: overview.md
docs/docs/configuration/: authentication.md  database.md  server.md  tls-security.md
docs/docs/core-concepts/: event-handling.md  plugin-system.md
docs/docs/deployment/: client-server.md  standalone.md
docs/docs/getting-started/: installation.md  project-structure.md
docs/docs/plugin-development/: building-plugins.md  manifest.md  page-definitions.md
docs/src/: content.config.ts
docs/src/components/: Breadcrumbs.astro  DocsPagination.astro  DocsSidebar.astro  SEO.astro  (+11 more)
editors/vscode/: README.md  language-configuration.json  package.json  tsconfig.json
examples/: component-whitelisting-simple.orbis
orbis/: eslint.config.mts  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
orbis/src/: App.css  App.tsx  app-new.tsx  app.css  app.tsx  main.tsx
orbis/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
orbis/src-tauri/plugins/: standalone.wasm
orbis/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
plugin-api/: Cargo.toml
plugin-api/docs/: api-reference.md  integration.md  plugin-development.md  security.md
plugin-api/src/: bridge.rs  context.rs  context_manager.rs  hook.rs  lib.rs  limits.rs  macros.rs  metrics.rs  monitoring.rs  registry.rs  requirements.rs  security.rs  signature.rs
plugin-api/src/ipc/: mod.rs  protocol.rs  server.rs  unix.rs
plugin-api/src/process/: manager.rs  mod.rs  process.rs
plugin-api/src/sandbox/: linux.rs  network.rs
plugins/: .gitignore  README.md
plugins/API/: Cargo.toml  README.md
plugins/example-plugin/: Cargo.toml
plugins/hello-plugin/: Cargo.toml  build.sh  manifest.json
plugins/hello-plugin/src/: lib.rs
plugins/my-first-plugin/: Cargo.toml  build.sh  manifest.json
plugins/my-first-plugin/src/: lib.rs
plugins/quick-start-plugin/: Cargo.toml  build.sh  manifest.json
plugins/quick-start-plugin/src/: lib.rs
plugins/test-plugin/: Cargo.toml  build.sh  manifest.json
plugins/worker/: Cargo.toml
sample-plugins/: .gitignore  README.md  TEST_RESULTS.md
sample-plugins/hello-plugin/: add_custom_section.py  build.sh  manifest.json
scripts/: verify-setup.sh
server/: Cargo.toml
server/src/: main.rs
shared/hasher/: Cargo.toml
shared/signer/: Cargo.toml
shared/signer/src/: errors.rs  lib.rs
(+221 files in other folders)
