[package]
name = "plugin-api"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
default = ["server"]
# Server-side features (plugin loading, management, sandboxing)
server = [
    "loader",
    "security",
    "registry",
    "monitoring",
    "sandboxing",
    "process-management",
    "signing",  # Server can sign and verify
]
# Plugin-side features (context proxy, basic execution)
plugin = ["context-proxy", "macros"]

# Individual feature components
loader = ["dep:libloading"]
security = ["dep:sha3", "dep:chacha20poly1305", "dep:base64", "dep:zeroize", "dep:keyring", "dep:whoami"]
signing = ["dep:ed25519-dalek", "dep:hex", "dep:rand", "dep:chrono"]  # Signature creation and verification
registry = []
monitoring = []
sandboxing = ["dep:nix", "dep:libseccomp", "dep:caps"]
process-management = []
context-proxy = []
macros = ["dep:paste"]

[dependencies]
# Core dependencies (always included)
thiserror = "2"
async-trait = "0.1.89"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

# Optional dependencies
paste = { version = "1", optional = true }
sha3 = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
zeroize = { version = "1", optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
hex = { version = "0.4", optional = true }
chrono = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
libloading = { version = "0.9.0", optional = true }
keyring = { version = "3", optional = true }
whoami = { version = "1", optional = true }
serde_bytes = "0.11.19"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["sched", "process", "fs"], optional = true }
libseccomp = { version = "0.3", optional = true }
caps = { version = "0.5", optional = true }

[lints]
workspace = true

