[package]
name = "orbis-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Authentication and authorization for Orbis"

[lints]
workspace = true

[dependencies]
orbis-core = { workspace = true }
orbis-config = { workspace = true }
orbis-db = { workspace = true }

# Crypto
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
