[package]
name = "orbis-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Configuration management for Orbis via CLI args and environment variables"

[lints]
workspace = true

[dependencies]
orbis-core = { workspace = true }

# CLI and config
clap = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
once_cell = { workspace = true }
parking_lot = { workspace = true }
