[package]
name = "orbis-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core types, errors, and utilities for Orbis"

[lints]
workspace = true

[features]
default = []
orbis-plugin-api = ["dep:orbis-plugin-api"]

[dependencies]
# Plugin API (for error conversion)
orbis-plugin-api = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
derive_more = { workspace = true }
typed-builder = { workspace = true }
bon = { workspace = true }
semver = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
