[package]
name = "orbis-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Database layer for Orbis with SQLx, migrations, and multi-backend support"

[lints]
workspace = true

[features]
default = ["postgres", "sqlite"]
postgres = []
sqlite = []

[dependencies]
orbis-core = { workspace = true }
orbis-config = { workspace = true }

# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
