[package]
name = "orbis-dsl"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true

[dependencies]
heck = "0.5"
pest = "2.8.4"
pest_derive = "2.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
heck = "0.5"
maplit = "1.0.2"

[lints]
workspace = true
