[package]
name = "orbis-lsp"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "README.md"
description = "Language Server Protocol implementation for the Orbis DSL"

[[bin]]
name = "orbis-lsp"
path = "src/main.rs"

[dependencies]
# LSP implementation
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Orbis DSL parser
orbis-dsl = { path = "../orbis-dsl" }

# Pest for parsing
pest = "2.8.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dashmap = "6.0"
ropey = "1.6"
lsp-types = "0.97"
heck = "0.5"

[lints]
workspace = true
