[package]
name = "orbis"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Extensible asset management platform"

[lints]
workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orbis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Orbis crates
orbis-core = { workspace = true }
orbis-config = { workspace = true }
orbis-db = { workspace = true }
orbis-auth = { workspace = true }
orbis-plugin = { workspace = true }
orbis-server = { workspace = true }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"


