[package]
name = "hello-plugin"
version = "0.1.0"
edition = "2021"

# Not part of the main workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link time optimization
strip = true        # Strip symbols
