[package]
name = "my-first-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Plugin API for manifest and UI schemas
orbis-plugin-api = { path = "../../crates/orbis-plugin-api" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link time optimization
strip = true        # Strip symbols
